--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         }
     },
     "require":{
-        "illuminate/database": "^8.69"
+        "illuminate/database": "^8.69",
+        "laminas/laminas-diactoros": "^2.8"
     }
 }
