--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     },
     "require":{
         "illuminate/database": "^8.69",
-        "laminas/laminas-diactoros": "^2.8"
+        "laminas/laminas-diactoros": "^2.8",
+        "aura/router": "^3.1"
     }
 }
