--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,8 @@
     "require":{
         "illuminate/database": "^8.69",
         "laminas/laminas-diactoros": "^2.8",
-        "aura/router": "^3.1"
+        "aura/router": "^3.1",
+        "components/highlightjs": "^9.16",
+        "twig/twig": "^3.3"
     }
 }
