--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,9 @@
         "laminas/laminas-diactoros": "^2.8",
         "aura/router": "^3.1",
         "components/highlightjs": "^9.16",
-        "twig/twig": "^3.3"
+        "twig/twig": "^3.3",
+        "respect/validation": "^2.2",
+        "league/glide": "^2.1",
+        "vlucas/phpdotenv": "^5.4"
     }
 }
